src/objects/MSN_Product__c.object
<CustomObject>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milligrams</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>MSN Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Code__c</columns>
        <columns>Price__c</columns>
        <columns>UOM__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MSN Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSN Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>